<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Dashboard Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/dashboardCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="6dp"
                app:shapeAppearance="@style/BottomRoundedCardView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="16dp"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/dashboardTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dashboard_title"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="8dp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <!-- User Image -->
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/userImage"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginTop="80dp"
                android:src="@drawable/user"
                android:layout_marginLeft="20dp"
                android:contentDescription="@string/user_image_description"
                android:adjustViewBounds="true"
                android:clipToOutline="true"
                app:layout_constraintTop_toBottomOf="@+id/dashboardCard"
                app:layout_constraintStart_toStartOf="parent"
                app:shapeAppearanceOverlay="@style/RoundedRectangleShapeAppearance"
                app:strokeWidth="4dp"
                app:strokeColor="@android:color/holo_blue_light" />



            <!-- User Details Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/userDetailsCard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="10dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="6dp"
                app:layout_constraintTop_toTopOf="@id/userImage"
                app:layout_constraintBottom_toBottomOf="@id/userImage"
                app:layout_constraintStart_toEndOf="@id/userImage"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    android:padding="12dp">

                    <TextView
                        android:id="@+id/userIdLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_details_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/userId"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_id" />

                    <TextView
                        android:id="@+id/userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_name" />

                    <TextView
                        android:id="@+id/userArea"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_area" />

                    <TextView
                        android:id="@+id/userSubmissions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/user_submissions" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Actions Card -->
            <androidx.cardview.widget.CardView
                android:id="@+id/actionsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                app:shapeAppearance="@style/BottomRoundedCardView"
                app:layout_constraintTop_toBottomOf="@id/userImage">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/actionsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actions_title"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:gravity="center" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Grid Layout -->
            <GridLayout
                android:id="@+id/actionsGrid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:columnCount="2"
                android:padding="20dp"
                android:rowCount="2"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/actionsCard">

                <!-- Upload Image Card -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/uploadImageCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    android:background="?attr/selectableItemBackground">

                    <LinearLayout
                        android:id="@+id/uploadImageButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/card_gradient_progress"
                        android:gravity="center"
                        android:clickable="true"
                        android:focusable="true"
                        android:orientation="vertical"
                        android:padding="24dp">
                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:src="@drawable/camera"
                            android:contentDescription="@string/upload_image_button" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/upload_image_button"
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <!-- Previous Submissions Card -->
        <androidx.cardview.widget.CardView
            android:id="@+id/previousSubmissionsCard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="4dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackground"
            android:background="?attr/selectableItemBackground">

        <LinearLayout
            android:id="@+id/previousSubmissionsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/card_gradient_progress"
            android:gravity="center"
            android:clickable="false"
            android:focusable="false"
            android:orientation="vertical"
            android:padding="16dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/progress"
            android:contentDescription="@string/previous_submissions_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/previous_submissions_button"
            android:textColor="@android:color/black"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>


    <!-- Complaint Status Card -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/complaintStatusCard"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="4dp"
                    android:foreground="?attr/selectableItemBackground"
                android:background="?android:attr/selectableItemBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/card_gradient_progress"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ImageView
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:src="@drawable/status"
                        android:contentDescription="@string/complaint_status_button" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/complaint_status_button"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </GridLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</ScrollView>
